# shortform-sludge-maker

./: .gitignore  README.md  SETUP.md  cli.py  cron.py  gui.py  pyproject.toml  scraper.py  video_maker.py  youtube_auth.py
config/: reddit_threads.json
src/metadata/: metadata_generator.py  model_benchmarking.py  post_scoring_benchmark.py  prompt_fine_tuner.py  scoring.py  test_reddit_post_content.json
src/narration/: narrarate.py
src/reddit_post_image/: post_image_maker.py
src/scraper/: scraper.py
src/scraper/html_examples/: httpsold.redditcomrAmItheAssholecomments1os46ueaita_for_asking_my_sister_in_law_what_shes_doing.html  httpsoldredditcomrAmItheAsshole.html  httpsoldredditcomrAmItheAssholecomments1nbq3x2do_you_have_a_butt_read_this.html  post_content.html
src/sludge/: sludge_video_extractor.py
src/tests/: test_scraper.py
src/transcription/: transcriber_local.py
src/video_editing/: caption_maker.py  video_editing_functions.py
src/youtube/: download_sludge.py  youtube_auth.py  youtube_upload.py
tests/: test_create_reddit_post.py  test_final_vid_pipeline.py  test_make_blurred_vid_step.py  test_narration.py  test_scoring.py  test_scraper.py
